--- a/style.css
+++ b/style.css
@@ -6,26 +6,20 @@
 
 .container
 {
-    /* height: 60vw; */
     width: 35vw;
-    /* margin-left: 12%; */
-    /* max-height: 70vh; */
-    /* background-color: blueviolet; */
 }
 
 .top_text
 {
-    /* background-color: aqua; */
     font-size: 20px;
     color: #505050;
     margin-top: 50px;
     width: max-content;
-    margin-left: 9%;
+    margin-left: 9.5%;
 }
 
 .info
 {
-    /* background-color: aquamarine; */
     margin-top: 50px;
     font-size: 18px;
     font-weight: bold;
@@ -33,7 +27,6 @@
 
 .shipping
 {
-    /* background-color: aquamarine; */
     margin-top: 50px;
     font-size: 18px;
     font-weight: bold;
@@ -86,29 +79,29 @@
 .country
 {
     font-size: 12px;
-    width: 50%;
+    width: 45%;
     margin-top: 10px;
     color: #505050;
     font-weight: bold;
-    /* background-color: aqua; */
 }
 
 .code
 {
     font-size: 12px;
-    width: 50%;
+    width: 45%;
     margin-top: 10px;
     color: #505050;
     font-weight: bold;
-    /* background-color: antiquewhite; */
 }
 
 .duo
 {
+    width: 100%;
     margin-top: 15px;
     color: #505050;
     font-weight: bold;
     display: flex;
+    justify-content: space-between;
 }
 
 .save
@@ -212,9 +205,13 @@ input
 
 .submit
 {
-    margin-left: 60%;
-    font-size: 30px;
+    font-size: 1.5vw;
     border-radius: 12px;
+    height: 4vw;
+    width: 12vw;
+    position: absolute;
+    padding: 5px;
+    right: 7%;
 }
 
 input[type=checkbox] {
@@ -223,14 +220,11 @@ input[type=checkbox] {
 
 .product
 {
-    /* position: absolute; */
     width: 25vw;
     height: 35vw;
-    /* left: 60%; */
-    margin-top: 170px;
+    margin-top: 70px;
     background: #F2F2F2;
     border-radius: 12px;
-    /* background-color: #505050; */
 }
 
 .product_one
@@ -278,7 +272,6 @@ input[type=checkbox] {
     width: 55%;
     font-size: 1vw;
     font-weight: bold;
-    /* background-color: aquamarine; */
 }
 
 .shoes_text
@@ -288,7 +281,6 @@ input[type=checkbox] {
     width: 55%;
     font-size: 1vw;
     font-weight: bold;
-    /* background-color: antiquewhite; */
 }
 
 .Quantity
@@ -300,6 +292,8 @@ input[type=checkbox] {
 .price
 {
     margin-top: 10%;
+    display: flex;
+    position: relative;
 }
 
 .footer
@@ -325,70 +319,104 @@ input
 {
     background-color: transparent;
     border: none;
-    width: max-content;
+    width: auto;
 }
 
 .total
 {
-    /* height: 50%; */
     width: 100%;
-    /* background-color: #E0E0E0; */
 }
 
 .quan
 {
-    width: 20%;
+    width: 40px;
+    text-align: center;
+    padding: 0;
 }
 
-#bag, #shoes
+#shoess
+{
+    position: absolute;
+    left: 60%;
+    width: 10%;
+    font-size: 0.9vw;
+}
+
+#bagg
+{
+    position: absolute;
+    left: 60%;
+    width: 10%;
+    font-size: 0.9vw;
+}
+
+#bag, #shoes, #shoess , #bagg 
 {
     color: #F2994A;
-    width: 50%;
+    width: 80%;
     padding: 0;
+}
+#bag, #shoes 
+{
+    font-size: 1.5vw;
 }
 
 .ship
 {
-    margin-top: 70px;
+    margin-top: 20%;
     font-weight: bold;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
-    width: 80%;
+    width: 90%;
     justify-content: space-between;
     font-size: 1vw;
-    /* background-color: #505050; */
 }
 
 .Total
 {
-    margin-top: 40px;
+    margin-top: 15%;
     font-weight: bold;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
-    width: 20vw;
+    width: 90%;
     font-size: 1vw;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    position: relative;
+}
+
+.up
+{
+    position: absolute;
+    left: 0;
 }
 
 #TOTAL
 {
-    width: 30%;
-    margin-left: 60%;
+    position: absolute;
+    right: 0;
+    width: 22%;
+    text-align: center;
+    padding-left: 0;
+    margin-left: 0;
     font-size: 1vw;
 }
 
-@media (max-width: 1000px)
+@media (max-width: 850px)
 {
     .Whole
     {
         display: flex;
+        margin-left: auto;
+        margin-right: auto;
         flex-direction: column-reverse;
         justify-content: space-between;
     }
 
     .container
     {
-        width: 80vw;
+        width: 90%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -414,37 +442,51 @@ input
 
     .ship
     {
-        margin-top: 70px;
-        font-weight: bold;
-        margin-left: 30px;
-        display: flex;
-        width: 80%;
-        justify-content: space-between;
+        margin-top: 20%;
         font-size: 3.5vw;
-        /* background-color: #505050; */
     }
 
     .Total
     {
-        margin-top: 20px;
-        font-weight: bold;
-        margin-left: 30px;
-        display: flex;
-        width: 40vw;
+        margin-top: 7%;
         font-size: 3.5vw;
-        justify-content: space-between;
+        background-color: #505050;
     }
 
     #TOTAL
     {
-        width: 70%;
-        margin-left: 110%;
         font-size: 3.5vw;
+    }
+
+    #shoes, #bag
+    {
+        font-size: 3.5vw;
+    }
+    
+    #shoess, #bagg
+    {
+        font-size: 2.5vw;
     }
 
     .input
     {
         height: 40px;
+        font-size: smaller;
+    }
+
+    .submit
+    {
+        height: 40px;
+        width: 100px;
+    }
+}
+
+@media (max-width: 500px)
+{
+    .container
+    {
+        width: 88vw;
+        margin-left: 2%;
     }
 }
 
